--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -7,7 +7,7 @@
 
 @font-face {
   font-family: 'Fira Sans Condensed';
-  src: url(FiraSansCondensed-Regular.woff2) format('woff2'), url(FiraSansCondensed-Regular.woff) format('woff');
+  src: url(FiraSansCondensed-Regular.woff2) format('woff2'), url(FiraSansCondensed-Regular.woff) format('woff') url(FiraSansCondensed-Regular.ttf) format('ttf');
   font-weight: 400;
   font-style: normal;
 }
